fix: sign-up path, theme on public routes and gap on component poker-table

--- a/src/app/modules/poker/components/poker-table/poker-table.component.css
+++ b/src/app/modules/poker/components/poker-table/poker-table.component.css
@@ -4,6 +4,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding-top: 100px;
+    margin-bottom: 20px;
 }
 
 #button-create-poker {
